# oss-governance-for-mem0

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
architecture/: threat-model.md
audit/: audit_log_schema.sql  audit_log_seed.sql
compliance/: ISO27001_MAPPING.md  README.md  SOC2_MAPPING.md  controls-mapping.md  data_retention_deletion.md  hipaa_gdpr_dpdp_annex.md  soc2_evidence_checklist.md
docker/: README.md  docker-compose.yml  grafana-provisioning-dashboards.yaml
docker/dashboards/: audit_dashboard.json
docs/: API_EXAMPLES.md  API_EXAMPLES_GO.md  API_EXAMPLES_JAVA.md  API_EXAMPLES_JAVASCRIPT.md  ARCHITECTURE.md  ARCHITECTURE_GUIDE.md  COMMON_SCENARIOS.md  COMPLIANCE.md  OPA_QUICKSTART.md  QUICKSTART.md  QUICKSTART_AUDITOR.md  README.md  SECURITY.md  TROUBLESHOOTING.md
examples/: complete_integration.py
gateway/: nginx.conf
gateway/middleware/: README_TESTS.md  conftest.py  main.py  requirements.txt  test_integration.py  test_main.py
iam/keycloak/: realm-mem0-governance.json
incident-response/: incident_response_playbook.md
mem0_governance/: __init__.py
mem0_governance/audit/: __init__.py
policies/: README.md  access_control.rego  access_control_test.rego  deny_by_default.rego  example_admin_access.json  example_user_denied.json  role_based_access.rego  validate_policy.sh
schemas/: README.md  audit_log_schema.sql  query_examples.sql
tests/: __init__.py  test_audit.py  test_policy.py  test_rbac.py  test_security.py  test_tenant.py
(+11 files in other folders)
